--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -4,7 +4,7 @@
 
         <div class="socials">
             {% for social in config.extra.socials | default(value=[]) %}
-            <a rel="me" href="{{ social.url }}" class="social">
+            <a rel="me" target="_blank" href="{{ social.url }}" class="social">
                 <img alt={{ social.name }} src={{ get_url(path="social_icons/" ~ social.icon ~ ".svg") }}>
             </a>
             {% endfor %}
