--- a/templates/404.html
+++ b/templates/404.html
@@ -3,6 +3,6 @@
 {% block main_content %}
     <main class="centered-header">
         {{ post_macros::page_header(title="404")}}
-        <span>Page not found :(</span>
+        <p>Page not found :(</p>
     </main>
 {% endblock main_content %}
