--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -159,12 +159,12 @@
     {% if theme == "dark" %}
         <link rel="stylesheet" type="text/css" href="{{ get_url(path='custom_dark.css') }}" />
     {% elif theme == "light" %}
-        <link rel="stylesheet" type="text/css" href={{ get_url(path="theme/light.css") }} />
+        <link rel="stylesheet" type="text/css" href="{{ get_url(path='custom_light.css') }}" />
     {% elif theme == "auto" %}
-        <link rel="stylesheet" type="text/css" href={{ get_url(path="theme/light.css") }} />
+        <link rel="stylesheet" type="text/css" href="{{ get_url(path='custom_light.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ get_url(path='custom_dark.css') }}" media="(prefers-color-scheme: dark)" />
     {% elif theme == "toggle" %}
-        <link rel="stylesheet" type="text/css" href={{ get_url(path="theme/light.css") }} />
+        <link rel="stylesheet" type="text/css" href="{{ get_url(path='custom_light.css') }}" />
         <link id="darkModeStyle" rel="stylesheet" type="text/css" href="{{ get_url(path='custom_dark.css') }}" />
     {% endif %}
 
